fix: Solve scroll problem - remove scroller class body . It caused the problem. - wrap whole content inside section with class scroller -

--- a/styles/scroller.css
+++ b/styles/scroller.css
@@ -1,5 +1,5 @@
 .scroller {
-    height: 300px;
+    height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
